Critical Bugfix: The test sources should not be part of the felix annotation processing. Bugfix: Settings page was broken because of type. Refactoring: Rename of refactoring action.

--- a/src/net/chilicat/felixscr/intellij/ui/SettingsPage.form
+++ b/src/net/chilicat/felixscr/intellij/ui/SettingsPage.form
@@ -71,7 +71,7 @@
         </constraints>
         <properties>
           <model>
-            <item value="overwite"/>
+            <item value="overwrite"/>
             <item value="merge"/>
           </model>
         </properties>
