- Skip test source and dependencies for SCR generation. - Add new debug logging options to settings page.

--- a/src/net/chilicat/felixscr/intellij/settings/ui/SettingsPage.form
+++ b/src/net/chilicat/felixscr/intellij/settings/ui/SettingsPage.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="net.chilicat.felixscr.intellij.settings.SettingsPage">
-  <grid id="27dc6" binding="page" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="page" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="907" height="400"/>
@@ -19,7 +19,7 @@
       </component>
       <vspacer id="6d4b3">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="9b4b2" class="javax.swing.JCheckBox" binding="strictModeBox">
@@ -102,6 +102,14 @@
         </constraints>
         <properties>
           <text value="Scan Classes"/>
+        </properties>
+      </component>
+      <component id="8e17" class="javax.swing.JCheckBox" binding="debugLoggingBox">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Debug Logging"/>
         </properties>
       </component>
     </children>
